--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ src="/images/logo.gif"></SPAN>
                 <TD>
                   <DIV id=telephoneIcon></DIV></TD>
                 <TD>
-                  <DIV id=telephoneNumber><SPAN>+7 499 
-                  753 05 80</SPAN></DIV></TD></TR></TBODY></TABLE></DIV>
+                  <DIV id=telephoneNumber><SPAN>+7 903 
+                  008 36 33</SPAN></DIV></TD></TR></TBODY></TABLE></DIV>
             <DIV class=spacerColumn></DIV></TD>
           <TD>
             <TABLE cellSpacing=0 cellPadding=0 width="100%">
@@ -194,11 +194,7 @@ src="/images/logo.gif"></SPAN>
           <TD class=noPrint vAlign=top width="23%">
             <DIV id=rootCategories>
             <H2 class=caption>Каталог продукции:</H2>
-            {% for greeting in greetings %}
-            <DIV class=categoryItem id=categoryItem_{{ forloop.counter }}>
-            <DIV class=categoryCaption><A class=categoryName title="{% if greeting.category %}{{ greeting.category }}{% else %}Пластики{% endif %}" href ="/material/?c={{ greeting.category }}">{% if greeting.category %}{{ greeting.category }}{% else %}Пластики{% endif %}</A> </DIV></DIV>
-            {% endfor %}
-            
+###            
             </DIV>
             <DIV id=popular>
             <H2 class=caption>Популярные материалы</H2>
@@ -309,7 +305,7 @@ div.scroll { BORDER-RIGHT: #dadada 1px solid; BORDER-TOP: #dadada 1px solid; Z-I
                 <TD vAlign=bottom align=right>
                   <DIV class="nowrap small gray underlineOver" 
                   style="PADDING-RIGHT: 0px; PADDING-LEFT: 0px; PADDING-BOTTOM: 1px; PADDING-TOP: 0px"><A 
-                  href="http://www.bestplast.biz/material/">Каталог материалов</A></DIV>
+                  href="/material/">Каталог материалов</A></DIV>
                   </TD></TR></TBODY></TABLE>
             <TABLE cellSpacing=0 cellPadding=0 width="100%">
               <TBODY>
@@ -414,7 +410,7 @@ id=hintCopy>©&nbsp;2013</DIV></TD>
                           <SCRIPT type=text/javascript><!--
 			document.write('@');
 		--></SCRIPT>
-                          bestplast.biz
+                          hiwe.info
                           <SCRIPT type=text/javascript><!--
 			document.write('</a>');
 		//--></SCRIPT>
