--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML><HEAD><TITLE>Пластики, полимеры /  Продажа пластиков, полимеров</TITLE>
 <SCRIPT type=text/javascript>var activeMenuItem = "";</SCRIPT>
-
+<meta name="yandex-verification" content="f60279a93ff1296b" />
 <META 
 content="Полимерные материалы для производства пластиков. При производстве пластиковых изделий максимально важно, использование пластика хорошего качества удовлетворяющего требованиям заказчика. Здесь систематизированы виды пластика и его возможности в использовании при производстве конечным производителем. Осуществляем поставки полимерных материалов, для производителей. Для полимерного производства использующего вторично преработанное сырье пластмасс мы производим на продажу вторичный пластик в дробленом виде, гранулу, агломерат." 
 name=Description>
